# Mayaqua

./: Cargo.toml
src/: encrypt.rs  http.rs  lib.rs  mayaqua.rs  memory.rs  network.rs  pack_reader.rs  pack_types.rs  pack_writer.rs  sock.rs
tests/: pack_test.rs  pack_types_test.rs
