[package]
name = "mayaqua"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-pemfile = { workspace = true }
